[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/player/projectile.gd" type="Script" id=1]

[node name="BaseProjectile" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Notifier" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="screen_exited" from="Notifier" to="." method="on_screen_exited"]
